# WebQ

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CHECKUP.md  GEMINI.md  README.md  REQUEST.md  TODO.md  package-lock.json  package.json  svelte.config.js  todo.mac.md  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1775692727496-d04c203a573fa.mjs
.agents/rules/svelte/: const_invalid_placement.md  paraglide_language_types.md  phase3-fixes.md  script_tags_missing.md  sveltekit_tsconfig_paths.md
.github/workflows/: release.yml  snap.yml
docs/: SnapStore.md  advanced_content_scanner.md  api_security_scanner.md  bulk_domain_validator.md  cloudflare_bypass.md  contact_spy.md  domain_dns.md  domain_info.md  geo_analysis.md  macos_detectors.md  nmap_zero_day.md  react2shell.md  readme.md  release.md  security_analysis.md  seo_analysis.md  signatures_and_algorithms.md  subdomain_discovery.md  subdomain_takeover.md  web_technologies.md
docs/docs/: architecture.md  i18n.md  native_desktop.md  vison.html
docs/ideas/: ai_crawler_readiness_ui.md  bulk_domain_triage_ui.md  dns_investigation_dashboard.md  engine_transparency_ui.md  infrastructure_port_matrix.md  intelligence_gathering_extended_ui.md  nmap_custom_profiles.md  react2shell_ui.md  reconnaissance_extended_ui.md  security_assessment_extended_ui.md
docs/todo/: README.md  domain_intelligence_audit.md  implementation_plan.md  task.md
docs/todo/api_security/: implementation_plan.md  task.md
docs/todo/cloudflare_bypass/: implementation_plan.md  task.md
docs/todo/final/: cleanup-trash.md  dns-clipboard.md  history-sqlite.md  implementation-state.md  jadx-integration.md  macos-release-signing-audit.md  module-integration-gaps.md  react2shell.md  release-macos.md  release-windows.md  release.md  snapcraft-release-audit.md  ux-polish.md  web-analyzer-0-1-11-rollout.md  web-analyzer-contract.md
docs/todo/geo_analysis/: implementation_plan.md  task.md
docs/todo/nmap_zero_day/: implementation_plan.md  task.md
docs/todo/security_analysis/: implementation_plan.md  task.md
docs/todo/subdomain_takeover/: implementation_plan.md  (+1 more)
messages/: en.json  tr.json
project.inlang/: project_id  settings.json
scripts/: deploy_website.sh
snap/: snapcraft.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  honeypot.rs  lib.rs  main.rs  system_health.rs
src/lib/: events.ts
src/routes/: +layout.svelte  +page.svelte
website/: README.md  package.json
website/messages/: en.json  tr.json
website/website/: package.json
(+175 files in other folders)
