[package]
name = "webq-app"
version = "0.1.0"
description = "WebQ Security Platform Backend"
authors = ["drvoid"]
edition = "2021"

[lib]
name = "webq_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
thiserror = "1"
web-analyzer = { path = "/home/drvoid/Qix/Qicro/web-analyzer" }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
